kubernetes/ui/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-backend
  namespace: default # Или другое пространство имен
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-backend
  template:
    metadata:
      labels:
        app: ui-backend
    spec:
      containers:
      - name: ui-backend
        image: justrunme/gitops-duel-ui-backend:latest
        ports:
        - containerPort: 3001
