kubernetes/ui/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-frontend
  namespace: default # Или другое пространство имен
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-frontend
  template:
    metadata:
      labels:
        app: ui-frontend
    spec:
      containers:
      - name: ui-frontend
        image: justrunme/gitops-duel-ui-frontend:latest
        ports:
        - containerPort: 80
