kubernetes/ui/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-backend
  namespace: default # Или другое пространство имен
spec:
  selector:
    app: ui-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
