kubernetes/ui/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-frontend
  namespace: default # Или другое пространство имен
spec:
  selector:
    app: ui-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
